--- a/modules/gadgeteer/cluster/Plugins/ApplicationDataManager/Makefile.in
+++ b/modules/gadgeteer/cluster/Plugins/ApplicationDataManager/Makefile.in
@@ -31,7 +31,7 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
 # -----------------------------------------------------------------------------
-# Makefile.in for gadgeteer/cluster/Plugins/ApplicaionDataManager.  It requires
+# Makefile.in for gadgeteer/plugins/ApplicaionDataManager.  It requires
 # GNU make.
 #
 # Generated for use on @PLATFORM@
@@ -44,10 +44,14 @@ include @topdir@/make.defs.mk
 
 PLUGIN_NAME=	ApplicationDataManager
 
-includedir=	@includedir@/cluster/Plugins/ApplicationDataManager
+includedir=	@includedir@/plugins/ApplicationDataManager
 srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
+
+INSTALL_FILES=	ApplicationData.h	\
+		UserData.h
+		
 SUBOBJDIR=	$(PLUGIN_NAME)
 C_AFTERBUILD=	plugin-dso
 
@@ -55,7 +59,7 @@ SRCS=		ApplicationDataManager.cpp   \
                 ApplicationDataServer.cpp
 
 include $(MKPATH)/dpp.obj.mk
-include @topdir@/cluster/Plugins/plugin.defs.mk
+include @topdir@/plugin.defs.mk
 
 # -----------------------------------------------------------------------------
 # Include dependencies generated automatically.
