--- a/juggler/modules/gadgeteer/Makefile.inc.in
+++ b/juggler/modules/gadgeteer/Makefile.inc.in
@@ -227,36 +227,6 @@ ifndef GLOBAL_BUILD
 	rm -rf $(instlinks)
 endif
 
-DSO_PLUGIN_SUBDIR=	gadgeteer/plugins
-DSO_PLUGIN_DIR=		$(LIBDIR_BASE)/$(DSO_PLUGIN_SUBDIR)
-
-plugins:
-ifdef BUILD_TYPE
-	$(MAKE) plugins-$(BUILD_TYPE)
-else
-	$(MAKE) plugins-dbg
-endif
-
-plugins-all plugins-opt:
-	$(MKINSTALLDIRS) $(DSO_PLUGIN_DIR)
-	$(MAKE) -C cluster/Plugins RECTARGET="$(BUILD_TYPE)"		\
-          DSO_PLUGIN_DIR="$(DSO_PLUGIN_DIR)" OPTIMIZER="$(OPT_FLAGS)"	\
-          BASE_OBJDIR="$(OPT_BUILDDIR)" LIBDIR="$(LIBDIR)" recursive
-
-plugins-dbg:
-	$(MKINSTALLDIRS) $(DSO_PLUGIN_DIR)
-	$(MAKE) -C cluster/Plugins RECTARGET="$(BUILD_TYPE)"		\
-          DSO_PLUGIN_DIR="$(DSO_PLUGIN_DIR)" OPTIMIZER="$(DBG_FLAGS)"	\
-          BASE_OBJDIR="$(DBG_BUILDDIR)" LIBDIR="$(LIBDIR)" recursive
-
-plugins-prof:
-	$(MKINSTALLDIRS) $(DSO_PLUGIN_DIR)
-	$(MAKE) -C cluster/Plugins RECTARGET="$(BUILD_TYPE)"		\
-          DSO_PLUGIN_DIR="$(DSO_PLUGIN_DIR)" LIBDIR="$(LIBDIR)"		\
-          BASE_OBJDIR="$(PROF_BUILDDIR)" OPTIMIZER="$(PROF_OPT_FLAGS)"	\
-          recursive
-
-
 # =============================================================================
 # Installation targets.  The default (what is done by 'install') is to install
 # the static debugging version of the libraries.  The steps taken for a full
@@ -294,11 +264,6 @@ hier:
 # Steps to take after the installation process is complete.  This target is
 # independent of the current ABI.
 afterinstall:
-	@$(MAKE) plugins
-	@$(MAKE) install-plugins
-	@echo "==============================================================="
-	@echo "ClusterJuggler $(BUILD_TYPE) plug-in installation complete"
-	@echo "==============================================================="
 
 PREINSTALL=	pre-install
 POSTINSTALL=	post-install
@@ -329,8 +294,8 @@ post-install-headers:
           $(includedir)/gadget/Devices/DriverConfig.h
 	$(INSTALL) -m $(FILE_PERMS) $(GROUP_OPT_UNIX)			\
           $(EXTRA_INSTALL_ARGS)						\
-          $(GADGETROOT_ABS)/cluster/Plugins/PluginConfig.h		\
-          $(includedir)/cluster/Plugins/PluginConfig.h
+          $(GADGETROOT_ABS)/cluster/PluginConfig.h			\
+          $(includedir)/cluster/PluginConfig.h
 	$(INSTALL) -m $(FILE_PERMS) $(GROUP_OPT_UNIX)			\
           $(EXTRA_INSTALL_ARGS) $(GADGETROOT_ABS)/gadget/gadgetConfig.h	\
           $(includedir)/gadget/gadgetConfig.h
@@ -340,16 +305,6 @@ post-install-headers:
 	$(INSTALL) -m $(FILE_PERMS) $(GROUP_OPT_UNIX)			\
           $(EXTRA_INSTALL_ARGS) $(topdir)/gadget/gadgetParam.h		\
           $(includedir)/gadget
-
-# Install dynamically loadable plugins (if any exist in $(DSO_PLUGIN_DIR)).
-install-plugins install-plugins-dbg install-plugins-opt install-plugins-prof:
-	if [ -d $(DSO_PLUGIN_DIR) ] ; then				\
-          $(PERL) $(scriptdir)/install-dir.pl -m $(EXEC_PERMS)		\
-            $(GROUP_OPT_UNIX) -e .so,.dll,.dylib $(EXTRA_INSTALL_ARGS)	\
-            -o $(libdir)$(LIBBITSUF)/$(DSO_PLUGIN_SUBDIR) -i		\
-            $(DSO_PLUGIN_DIR) ;						\
-        fi
-	$(MAKE) -C cluster/Plugins $@
 
 # Install the sample code.
 install-samples:
@@ -408,12 +363,11 @@ install-m4:
           $(datadir)/aclocal
 
 # =============================================================================
-# Clean-up targets.  '_cleandepend' removes all the .d files in the Devices
+# Clean-up targets.  '_cleandepend' removes all the .d files in the Plugins
 # directories.  '_clobber' removes the $(BUILDDIR_BASE) and $(LIBDIR_NAME)
 # directories.
 # =============================================================================
 _cleandepend:
-	@$(MAKE) -C cluster/Plugins DO_CLEANDEPEND=1 cleandepend
 
 _clobber:
 	@$(MAKE) cleandepend
