--- a/juggler.cfg
+++ b/juggler.cfg
@@ -48,6 +48,12 @@ Gadgeteer
    modules/gadgeteer: GADGETEER_CONFIG=gadgeteer-config, GADGET_BASE_DIR=instlinks;
 }
 
+GadgeteerPlugins
+{
+   depend Gadgeteer;
+   modules/gadgeteer/plugins;
+}
+
 GadgeteerDrivers
 {
    depend Gadgeteer;
@@ -60,6 +66,7 @@ VRJuggler
    depend Sonix;
    depend SonixPlugIns;
    depend Gadgeteer;
+   depend GadgeteerPlugins;
    depend GadgeteerDrivers;
    modules/vrjuggler: VRJ_CONFIG=vrjuggler-config, VJ_BASE_DIR=instlinks;
 }
