--- a/modules/gadgeteer/plugins/ApplicationDataManager/Makefile.in
+++ b/modules/gadgeteer/plugins/ApplicationDataManager/Makefile.in
@@ -49,14 +49,14 @@ srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 
-INSTALL_FILES=	ApplicationData.h	\
-		UserData.h
+INSTALL_FILES=	$(srcdir)/ApplicationData.h	\
+		$(srcdir)/UserData.h
 		
 SUBOBJDIR=	$(PLUGIN_NAME)
 C_AFTERBUILD=	plugin-dso
 
 SRCS=		ApplicationDataManager.cpp   \
-                ApplicationDataServer.cpp
+		ApplicationDataServer.cpp
 
 include $(MKPATH)/dpp.obj.mk
 include @topdir@/plugin.defs.mk
