--- a/juggler/modules/gadgeteer/plugins/ApplicationDataManager/Makefile.in
+++ b/juggler/modules/gadgeteer/plugins/ApplicationDataManager/Makefile.in
@@ -49,7 +49,8 @@ srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 
-INSTALL_FILES=	$(srcdir)/ApplicationData.h	\
+INSTALL_FILES=	$(srcdir)/ApplicationData.h		\
+		$(srcdir)/ApplicationDataManager.h	\
 		$(srcdir)/UserData.h
 		
 SUBOBJDIR=	$(PLUGIN_NAME)
