--- a/modules/sonix/plugins/plugin.defs.mk.in
+++ b/modules/sonix/plugins/plugin.defs.mk.in
@@ -67,4 +67,5 @@ DYLIB_DEPS=	$(PRE_DSO_PLUGIN_DEPS) @DSO_PLUGIN_DEPS@ $(POST_DSO_PLUGIN_DEPS)
 plugin-dso: $(DSO_PLUGIN_DIR)/$(PLUGIN_DSO)
 
 $(DSO_PLUGIN_DIR)/$(PLUGIN_DSO): $(OBJECTS)
+	$(MKINSTALLDIRS) $(DSO_PLUGIN_DIR)
 	$(CXX_PLUGIN) $(LDOPTS) $(DYLIB_NAME_FLAG) $(OBJECTS) $(DYLIB_DEPS)
