--- a/modules/vapor/configure.in
+++ b/modules/vapor/configure.in
@@ -54,7 +54,7 @@ AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2003 by Iowa State University])
 AC_CONFIG_SRCDIR([vpr/vprConfig.h])
 AC_REVISION($Revision$)
 AC_CONFIG_AUX_DIR([../../share/config])
-DPP_PREREQ([1.99.14])
+DPP_PREREQ([1.99.15])
 DPP_INIT
 
 # Generate the reconfig script first so that it's easy to run configure again
@@ -619,18 +619,20 @@ esac
 
 # We can only use multi-threading versions of Boost libraries if we are not
 # using SPROC threads.  Boost does not support SPROC.
-if test "x$SUBSYSTEM" != "xSPROC" ; then
+if test "x$SUBSYSTEM" != "xSPROC" -a "x$ABI" != "x64" ; then
    threading='-mt'
 fi
 
 # Ensure that a compiled version of the Boost.Filesystem library is available.
 boost_fs_name="boost_filesystem-$toolset$threading"
+vprsave_CFLAGS="$CFLAGS"
 vprsave_CPPFLAGS="$CPPFLAGS"
 vprsave_LIBS="$LIBS"
 vprsave_LDFLAGS="$LDFLAGS"
 
+CXXFLAGS="$CXXFLAGS $ABI_FLAGS"
 CPPFLAGS="$CPPFLAGS $BOOST_INCLUDES"
-LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
+LDFLAGS="$LDFLAGS $BOOST_LDFLAGS $ABI_FLAGS"
 LIBS="$LIBS -l$boost_fs_name"
 
 DPP_LANG_SAVE
@@ -648,6 +650,7 @@ if test "x$ac_cv_has_boost_fs_exists" = "xno" ; then
    AC_MSG_ERROR([*** Boost.Filesystem required by VPR ***])
 fi
 
+CXXFLAGS="$vprsave_CXXFLAGS"
 CPPFLAGS="$vprsave_CPPFLAGS"
 LIBS="$vprsave_LIBS"
 LDFLAGS="$vprsave_LDFLAGS"
@@ -694,7 +697,7 @@ AC_MSG_RESULT([$cppdom_version])
 DPP_VERSION_CHECK([$cppdom_version], [$min_cppdom_version], ,
    [AC_MSG_ERROR([*** CppDOM version $min_cppdom_version or newer is requried for VPR ***])])
 
-CXXFLAGS="$CPPDOM_CXXFLAGS $CXXFLAGS $STDFLAGS ${_EXTRA_FLAGS}"
+CXXFLAGS="$CPPDOM_CXXFLAGS $CXXFLAGS $STDFLAGS $ABI_FLAGS"
 CPPFLAGS="$CPPDOM_CXXFLAGS $CPPFLAGS"
 LDFLAGS="$CPPDOM_LIBS $LDFLAGS"
 
@@ -804,7 +807,7 @@ else
 fi
 
 VJ_APP_COMPILER($CC, $CFLAGS, $CXX, $CXXFLAGS, $DBG_FLAGS, $OPT_FLAGS,
-                VPR_BASE_DIR, $DEFS, $INCLUDES, ${_EXTRA_FLAGS})
+                VPR_BASE_DIR, $DEFS, $INCLUDES, $ABI_FLAGS)
 VJ_APP_LINKER([$CXX], [$BASE_APP_LINK_FLAGS], [$LDOPTS_DBG], [$LDOPTS_OPT],
               [VPR_BASE_DIR], [vpr], [$APP_EXTRA_LIBS])
 
